Fixes and Enhancements since Version 0.5 alpha 2

 Changed, Enhanced, or Newly Deprecated Features

 - .ini files now support "smart property" objects ('config.ISmartProperty').
   If a property rule defined in an .ini file evaluates at runtime to an object
   that implements 'ISmartProperty', the object will be given a chance to
   compute a value for the property, in place of being used itself.  This helps
   to simplify definition of complex property rules in .ini files, by allowing
   the use of helper classes.  Also, 'naming.LinkRef' and 'naming.Reference'
   (indirectly) support this interface, so you can now use them in .ini files
   to refer to an object via the naming system.  (Previously, 'naming.LinkRef'
   wouldn't do the right thing unless the property was looked up via a
   'config:' URL, and 'naming.Reference' didn't exist.)

 - 'peak.util.imports.whenImported()' can now be used even when the specified
   module has already been loaded.

 - The naming system no longer has 'objectFactories' and 'stateFactories' as
   utilities; they have been replaced with new mechanisms involving adaptation.
   Previously, addresses had a 'retrieve()' method that could be used to
   retrieve the object defined by the address.  Now, to retrieve an object for
   an address, you must either define a context that processes the address, or
   the address must have a 'defaultFactory' attribute, which provides a name
   to be imported to get an 'IObjectFactory' that can construct the referenced
   object.  (This is simpler than it sounds; for URLs that reference
   ManagedConnections, for example, all you need to do is provide the fully
   qualified name of the connection class.)

   Meanwhile, writable naming contexts must have a 'serializationProtocol'
   attribute, specifying what interface an object should be adapted to before
   attempting to store it in that context.

   The naming system no longer processes the 'creationName' keyword argument;